[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-retriever"
version = "0.1.0"
description = "Clinical KG-based FAISS retriever refactored into builder/index/retrieve/filter stages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3",
  "faiss-cpu",
  "numpy",
  "pandas",
  "pyarrow",
  "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
